<resources>
    <string name="app_name">BukPlayer</string>
    <string name="settings">Settings</string>
    <string name="server_url">Server URL</string>
    <string name="server_url_description">Lorem ipsum lorem</string>
    <string name="service_description">Allows playing music when the application is in the background</string>
    <string name="channel_name">Player notification channel</string>
    <string name="channel_description">Channel for player notifications</string>
    <string name="invalid_url_error">Your URL was incorrect! Reverting settings.</string>
    <string name="play">Play</string>
    <string name="stop">Stop</string>
    <string name="pause">Pause</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="basic_auth">Basic Auth</string>
    <string name="audiobooks_collection">Audiobooks collection</string>
    <string name="replay_15">Replay 15 seconds</string>
    <string name="forward_15">Forward 15 seconds</string>
    <string name="player_progress">%1$d %% complete - %2$s left</string>
    <string name="pref_server_url">serverURL</string>
    <string name="pref_auth_enabled">isBasicAuthEnabled</string>
    <string name="pref_auth_username">basicAuthUsername</string>
    <string name="pref_auth_password">basicAuthPassword</string>
    <string name="complete">complete</string>
    <string name="left">left</string>
</resources>
